Day-24-NetworkSecurity/3-zero-trust-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-vault-lockdown
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: vault-db 
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: authorized-api 
    ports:
    - protocol: TCP
      port: 6379
